--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Usage:
 
 import Writablizer._
 
-2L.longw       // hadoop.io.LongWritable
-3.intw         // hadoop.io.IntWritable
-"hello".textw  // hadoop.io.Text
+2L longw       // hadoop.io.LongWritable
+3 intw         // hadoop.io.IntWritable
+"hello" textw  // hadoop.io.Text
 
